# cpp_weekly

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  main.yml
algorithms/: accumulate_test.cc  integer_divide_test.cc  odd_even_sort.cc  partial_sort_test.cc  partition_test.cc  reduce_test.cc  scan.cc  set_operations_test.cc  std_generate_test.cc  transform_test.cc
boost_related/: reflection_test.cc
class/: class_test.cc  inheritance_test.cc
concurrent/: create_thread.cc  producer_consumer.cc
conversion_function/: CMakeLists.txt  conversion_function.cc  main.cc
cpp20_features/: atomic_ref_test.cc  barrier_test.cc  comparisons.cc  concepts_requirements_constraints_test.cc  format_test.cc  latches.cc  placeholder_types.cc  ranges_and_views_test.cc  semaphores_test.cc  standard_conepts_test.cc
cpp_challenges/: chap1_math_problems.cc
ep332_lambda_vs_std_function_vs_function_pointer/: CMakeLists.txt  main.cc
formatting/: CMakeLists.txt  formatting_test.cc  main.cc
functional/: functional_test.cc  invoke_test.cc
functional_programming/: chap_1_introduction.cc  function_object.cc
functor/: CMakeLists.txt  function_test.cc  main.cc
future/: future_test.cc
include/: internal_check_conds.h  my_timer.h
io/: CMakeLists.txt  file_io_exceptions.cc  in_file_test.cc  io_test.cc
meta_programming/: limits_test.cc  meta-programming.md  readme.md  tuple_impl.cc  type_traits_test.cc  typelist_impl.cc
misc/: CMakeLists.txt  age_test.cc  cg_algo.cc  class_related_hash_function.cc  constexpr_test.cc  cpp_weekly_youtube_test.cc  for_range_test.cc  getter_setter_impl.cc  if_switch_with_init.cc  initializer_list_test.cc  inline_namespace_test.cc  new_delete_test.cc  noexcept_test.cc  optional_test.cc  override_overload_overwrite.cc  placeholders_test.cc  random_test.cc  shared_mutex_test.cc  smallest_value_without_operator.cc  std_copy_test.cc  structured_binding.cc  typeinfo_test.cc  variadic_template_examples.cc
misc/reference_cnt_demo/: reference_cnt.cc  reference_cnt.h
new_features/cpp_17/inline_variable/: counter.h  func.cc  inline_variable_main.cc
optimizations/: small_string_optimization.cc
paradigms/: lambda_expressions.cc
pointer_like_classes/: CMakeLists.txt  iterator_case.cc  iterator_case_test.cc  main.cc  shared_ptr_test.cc
regrex/: match_search_test.cc
standard_libraries/: numeric_test.cc  random_test.cc
stl/: CMakeLists.txt  iterator_test.cc  tuple_test.cc  valarray_test.cc  vector_test.cc
strings/: CMakeLists.txt  op_sequence_string.cc  string_test.cc  string_view_test.cc
template/: CMakeLists.txt  CTAD_class_template_argument_deduction.cc  appendix_b.cc  basics_test.cc  chap4_variadic_templates.cc  chap_11_generic_libraries.cc  chap_12_fundamentals_in_depth.cc  chap_1_function_templates.cc  chap_2_class_templates.cc  chap_3_nontype_template_parameters.cc  chap_4_variadic_templates.cc  chap_5_tricky_basics.cc  chap_6_move_semantics.cc  chap_7_by_value_or_by_reference.cc  chap_8_compile_time_programming.cc  class_template.cc  class_template_test.cc  crtp_test.cc  declval_test.cc  design_uniform_function_interfaces.cc  enable_if_test.cc  for_loop_in_compile_time.cc  function_template.cc  function_template_test.cc  integer_sequence_test.cc  irange_impl.cc  miscs.cc  partial_specialization_test.cc  ref_cref_test.cc  sfinae_test.cc  template_design_examples.cc  template_recursion_test.cc  test  using_template_test.cc  variadic_class_inheritance_example.cc
topics/deep_vs_shallow/: deep_vs_shallow.hpp  deep_vs_shallow_main.cc
topics/memory_block_management/: memory_block_management.hpp  memory_block_management_main.cc
youtube/: e340_string_split_test.cc
